syntax = "proto3";

service UserManagement {
    rpc RegisterCustomer (RegisterCustomerRequest) returns (RegisterCustomerResponse) {}
    rpc IssueUserToken (IssueUserTokenRequest) returns (IssueUserTokenResponse) {}
    rpc AuthenticateUser (AuthenticateUserRequest) returns (AuthenticateUserResponse) {}
}

message RegisterCustomerRequest {
    string Email = 1;
    string Password = 2;
    string FirstName = 3;
    string LastName = 4;
    string LicenseId = 5;
}

message RegisterCustomerResponse {
    bool Successful = 1;
    string Token = 2;
}

message IssueUserTokenRequest {
    string Email = 1;
    string Password = 2;
}

message IssueUserTokenResponse {
    bool Successful = 1;
    string Token = 2;
}

message AuthenticateUserRequest {
    string Token = 1;
}

message AuthenticateUserResponse {
    bool Authenticated = 1;
    string Email = 2;
    string Role = 3;
}
